modified:   design_docs/Quest.xlsx 	modified:   fillin_player/fillin_player.py 	modified:   game_logic.py 	modified:   models/player.py 	modified:   routers/routes.py 	modified:   templates/logs.html 	modified:   test/test_alg.py 	new file:   test/test_invite.py 	modified:   timer.py

--- a/templates/logs.html
+++ b/templates/logs.html
@@ -55,6 +55,9 @@ document.addEventListener("DOMContentLoaded", function() {
                 console.log('Received:', response.type);
                 displayGameInfo(response.data);
                 break;
+            case 'test_info':
+                console.log('Received:', response.type, response.data);
+                break;
             case 'notification':
                 displayNotification(response.data);
                 break;
